Replace the deprecated onActivity by ActivityResultContracts